--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
                 <input type="number" id="input_stock_quantity" class="input_stock_quantity" 
                 placeholder="Quantity" min="1">
                 <br><br>
-                <button class="btnAddStock" id="add_stock" onclick="fetchDataFromTicker()">Add Stock</button>
+                <button class="btnAddStock" id="add_stock" onclick="getStockData()">Add Stock</button>
                 
             </div>
             <br><br>
