--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>StockWiz</title>
+        <title>Home | StockWiz</title>
         <meta name="description" content="Stock Prediction Site Using Tensorflow.js">
         <link rel="icon" href="/images/logo.png" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1">
